--- a/plugins/jquery-pagewalkthrough/css/jquery.pagewalkthrough.css
+++ b/plugins/jquery-pagewalkthrough/css/jquery.pagewalkthrough.css
@@ -5,42 +5,26 @@
   color: #00c7ff;
   cursor: pointer;
   font-family: 'GochiHand';
-  font-size: 16px;
+  font-size: 18px;
   font-weight: lighter;
 }
 #jpwOverlay {
-  background: url(images/overlay.png) repeat;
+  background: rgba(0, 0, 0, 0.6);
   position: fixed;
-  z-index: 9999;
+  z-index: 999999;
   top: 0;
   width: 100%;
   height: 100%;
   display: block;
 }
-#jpWalkthrough .overlay {
-  background: url(images/overlay.png) repeat;
-  position: absolute;
-  z-index: 9999;
-}
-#jpWalkthrough .noOverlay {
+#jpwOverlay.transparent {
   background: none;
-  position: absolute;
-  z-index: 9999;
 }
-#jpWalkthrough #overlayTop {
-  width: 100%;
-  top: 0;
-  left: 0;
+#jpWalkthrough.jpw-scrolling .overlay-hole > div {
+  box-shadow: inset 0 0 10px 1000px rgba(0, 0, 0, 0.6);
 }
-#jpWalkthrough #overlayLeft {
-  left: 0;
-}
-#jpWalkthrough #highlightedArea {
-  position: absolute;
-}
-#jpWalkthrough #overlayBottom {
-  width: 100%;
-  left: 0;
+#jpWalkthrough .overlay-hole > div {
+  box-shadow: inset 0 0 10px 10px rgba(0, 0, 0, 0.6);
 }
 #jpWalkthrough #jpwTooltip {
   overflow: visible;
@@ -112,10 +96,10 @@
   font-family: 'GochiHand';
   color: #ffffff;
   text-align: center;
-  font-size: 16px;
+  font-size: 22px;
 }
 #jpWalkthrough #jpwTooltip #tooltipInner a {
-  font-size: 16px;
+  font-size: 22px;
 }
 #jpWalkthrough #jpwTooltip #tooltipInner .tooltipTitle {
   font-size: 40px;
@@ -124,76 +108,11 @@
   background-image: none !important;
   background-color: none !important;
 }
-#jpWalkthrough #topAccessable,
-#jpWalkthrough #middleAccessable,
-#jpWalkthrough #bottomAccessable {
-  z-index: 9999;
-}
-#jpWalkthrough #highlightedArea #topLeft,
-#jpWalkthrough #topAccessable #topLeft {
-  background: url(images/rounded.png) no-repeat left top;
-  height: 30px;
-  width: 30px;
-  float: left;
-}
-#jpWalkthrough #highlightedArea #topCenter,
-#jpWalkthrough #topAccessable #topCenter {
-  background: url(images/borderTop.png) repeat-x 0 0;
-  height: 30px;
-  float: left;
-}
-#jpWalkthrough #highlightedArea #topRight,
-#jpWalkthrough #topAccessable #topRight {
-  background: url(images/rounded.png) no-repeat right top;
-  height: 30px;
-  width: 30px;
-  float: left;
-}
-#jpWalkthrough #highlightedArea #middleLeft,
-#jpWalkthrough #middleAccessable #middleLeft {
-  background: url(images/borderLeft.png) repeat-y left top;
-  width: 30px;
-  height: 30px;
-  float: left;
-}
-#jpWalkthrough #highlightedArea #middleCenter,
-#jpWalkthrough #middleAccessable #middleCenter {
-  background: transparent;
-  float: left;
-  overflow: hidden;
-}
-#jpWalkthrough #highlightedArea #middleRight,
-#jpWalkthrough #middleAccessable #middleRight {
-  background: url(images/borderRight.png) repeat-y right top;
-  width: 30px;
-  height: 30px;
-  float: left;
-}
-#jpWalkthrough #highlightedArea #bottomLeft,
-#jpWalkthrough #bottomAccessable #bottomLeft {
-  background: url(images/rounded.png) no-repeat left bottom;
-  height: 30px;
-  width: 30px;
-  float: left;
-}
-#jpWalkthrough #highlightedArea #bottomCenter,
-#jpWalkthrough #bottomAccessable #bottomCenter {
-  background: url(images/borderBottom.png) repeat-x 0 bottom;
-  height: 30px;
-  float: left;
-}
-#jpWalkthrough #highlightedArea #bottomRight,
-#jpWalkthrough #bottomAccessable #bottomRight {
-  background: url(images/rounded.png) no-repeat right bottom;
-  height: 30px;
-  width: 30px;
-  float: left;
-}
 #jpwClose {
   position: fixed;
   top: 65px;
   right: 25px;
-  z-index: 10000;
+  z-index: 1000000;
   color: #ffffff;
   text-align: center;
   display: block;
